2008-12-19  Elliott Baron  <ebaron@redhat.com>

	PR3668
	* elaborate.cxx: Handling for %M.
	* runtime/vsprintf.c: Likewise.
	* staptree.cxx: Likewise.
	* translate.cxx: Likewise.
	* staptree.h: Added %M converter, conv_memory_hex, to enum

2008-12-16  Roland McGrath  <roland@redhat.com>

	* systemtap.spec (Requires): Add kernel-devel, is correct virtual
	provide in kernel-*-devel rpms.
	(with_sqlite): Typo fix in default defn check.
	[%{with_sqlite}] (Requires): Remove.  BuildRequires causes the correct
	automatic dependency.

2008-12-16  Stan Cox  <scox@redhat.com>

	* tapsets.cxx (dwarf_builder::build): Consider alignment when
	fetching .probes values.  Convert .mark to .statement(0x) instead
	of .statement(foo.c:N)

2008-12-11  Dave Brolley  <brolley@redhat.com>

	PR7087
	* stap-client: Don't use -d on netcat. Redirect from /dev/null instead.
	* stap-server: Likewise.
	* stap-serverd: Likewise.

2008-12-09  Frank Ch. Eigler  <fche@elastic.org>

	PR6961
	* tapsets.cxx (common_probe_entryfn_prologue): Add new "fakeregs"
	param.  Set context regs_buffer with plausible dummy values if needed.
	Update callers.
	(mark_builder::build): Add kernel to unwindsyms_modules.
	* translate.cxx (emit_common_header): Add pt_regs regs_buffer field
	to context.

2008-12-09  Dave Brolley  <brolley@redhat.com>

	PR7087
	* stap-client: Use netcat or nc, whichever is available.
	* stap-server: Likewise.
	* stap-serverd: Likewise.

2008-12-08  David Smith  <dsmith@redhat.com>

	RHBZ 474390
	* tapsets.cxx (dwflpp::cu_function_caching_callback): Handles NULL
	return from dwarf_diename().
	(dwflpp::print_locals): Ditto.
	(dwflpp::find_variable_and_frame_base): Ditto.
	(dwflpp::literal_stmt_for_return): Ditto.
	(dwarf_builder::build): Ditto.

2008-12-08  Frank Ch. Eigler  <fche@elastic.org>

	PR7062
	* buildrun.cxx (uprobes_home): Make local, based on
	session.runtime_path.

2008-12-05  Frank Ch. Eigler  <fche@elastic.org>

	* tapsets.cxx, translate.cxx: Set default elfutils debuginfo_path