@@ -1,3 +1,8 @@
+2008-12-21  Stan Cox  <scox@redhat.com>
+
+	* tapsets.cxx (dwflpp::die_has_pc): Don't abort if dwarf_ranges fails.
+	(dwflpp::find_variable_and_frame_base): A pc requires dwarf_nscopes
+
 2008-12-19  Elliott Baron  <ebaron@redhat.com>
 
 	PR3668
